# uv-monorepo2

./: .gitignore  README.md  pyproject.toml
notebooks/: notebook.ipynb
src/api/: pyproject.toml
src/api/src/api/: main.py
src/api/src/api/foo/: foo.py
